# store-api

./: .env.sample  .flake8  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/: base.py  cart.py  product.py  users.py
src/config/: db.py  settings.py
src/migrations/: env.py
src/migrations/versions/: 4352eef4cc3a_ondelete_cascade_for_tables.py  77987a2bcc91_init.py  9b24f25e85da_init.py
src/models/: cart.py  cart_product.py  product.py  user.py  users.py
src/schemas/: cart.py  cart_product.py  product.py  users.py
src/services/: cart.py  create_admin.py  product.py  users.py
tests/: conftest.py  test_anonymous.py  test_auth.py  test_cart.py  test_product.py
