[tool.poetry]
name = "store-api"
version = "0.1.0"
description = ""
authors = ["Anton Pashinov <troxin1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.2"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"
pyjwt = "^2.9.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = "src/migrations"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_default_fixture_loop_scope="session"
asyncio_mode="auto"

[tool.coverage.run]
omit = ["*/tests/*"] 

