[tool.poetry]
name = "store-api"
version = "0.1.0"
description = ""
authors = ["Anton Pashinov <troxin1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standart"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
alembic = "^1.13.3"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
asyncpg = "^0.30.0"

[tool.poetry.group.develop.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
coverage = "^7.6.4"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = "src/migrations"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_default_fixture_loop_scope="session"
asyncio_mode="auto"

[tool.coverage.run]
omit = ["*/tests/*"] 
